test(sidenav): add test for clicking sidenav-link behaviour

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
 
-    <sgds-sidenav class="mt-3" id="test-id" alwaysOpen>
+    <sgds-sidenav class="mt-3" id="test-id">
         <sgds-sidenav-item active>
             <span slot="title">
                 <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
