chore(*): add quantity toggle example in localhost

--- a/index.html
+++ b/index.html
@@ -649,6 +649,9 @@
             <div class="container">
                 <h2>Quantity Toggle</h2>
                 <div class="row">
+                    <sgds-quantity-toggle step="1" quantitytoggleclasses="" size="sm" name="" buttonvariant="primary" defaultvalue="0"></sgds-quantity-toggle>
+                </div>
+                <div class="row">
                     <sgds-dropdown togglerText="Dropdown">
                         <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
                         <sgds-dropdown-item href="#">item #2</sgds-dropdown-item>
