refactor(badge): replace badge styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         } */
 
         :root {
-            --sgds-primary: blue;
+            /* --sgds-primary: blue; */
         }
 
         body {
@@ -375,17 +375,96 @@
                             soluta eaque fugit fuga distinctio? Eum.</span>
                     </sgds-accordion-item>
                     <sgds-accordion-item>
-                      <p class="m-0" slot="accordion-header">Accordion 3</p>
-                      <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores soluta eaque fugit fuga distinctio? Eum.</span>
+                        <p class="m-0" slot="accordion-header">Accordion 3</p>
+                        <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+                            soluta eaque fugit fuga distinctio? Eum.</span>
                     </sgds-accordion-item>
-                  </sgds-accordion>
+                </sgds-accordion>
                 <h2>Badge</h2>
                 <div class="row">
-                    <sgds-badge variant="danger">
-                        Testing
-                        <i slot="rightIcon" class="bi bi-apple"></i>
-                        <i slot="leftIcon" class="bi bi-123"></i>
-                    </sgds-badge>
+                    <div class="d-flex">
+                        <sgds-badge variant="primary" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="secondary" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="warning" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="success" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="danger" isLight roundedPill>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="info" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="light" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="dark" isLight>
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="primary">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="secondary">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="warning">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="success">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="danger">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="info">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="light">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="dark">
+                            Testing
+                            <i slot="rightIcon" class="bi bi-apple"></i>
+                            <i slot="leftIcon" class="bi bi-123"></i>
+                        </sgds-badge>
+                    </div>
+
                 </div>
             </div>
             <div class="container">
