refactor(card): transfer to css

--- a/index.html
+++ b/index.html
@@ -571,9 +571,8 @@
             </div>
             <div class="container">
                 <h2>Selectable card</h2>
-                <sgds-action-card>asdasd</sgds-action-card>
 
-                <sgds-action-card bordercolor="primary" textcolor="primary" active bgColor="warning" checked disabled
+                <sgds-action-card bordercolor="primary" textcolor="primary" active bgColor="warning" checked
                     type="checkbox" name="">
                     <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-box" viewBox="0 0 16 16">
@@ -585,6 +584,17 @@
                     <span slot="card-title">Apple</span>
                     <span slot="card-text">Macbook Pro M1</span>
                 </sgds-action-card>
+            </div>
+            <div class="container">
+                <h2>Card</h2>
+                <sgds-card bordercolor="primary" textcolor="" stretchedLink>
+                    <img slot="card-image" alt="img alternate text goes here"
+                        src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80">
+                    <span slot="card-title">Card</span>
+                    <span slot="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</span>
+                    <a slot="card-link" href="https://google.com">Go somewhere</a>
+                </sgds-card>
             </div>
             <div class="container">
                 <h2>Input</h2>
