refactor(progress): replace sgdsElement.styles

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </sgds-progress>
 
                 <sgds-progress height="40">
-                    <sgds-progress-bar value="50" variant="secondary"></sgds-progress-bar>
+                    <sgds-progress-bar value="50" variant="secondary" striped animated></sgds-progress-bar>
                 </sgds-progress>
 
                 <sgds-progress height="10">
