refactor(quantity-toggle): replace with cs

--- a/index.html
+++ b/index.html
@@ -797,6 +797,9 @@
             </div>
             <div class="container">
                 <h2>Quantity Toggle</h2>
+                <sgds-quantity-toggle step="1"
+                    buttonvariant="primary" defaultvalue="0"></sgds-quantity-toggle>
+
                 <div class="row">
                     <sgds-dropdown togglerText="Dropdown">
                         <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
