refactor(spinner, stepper): replace sgdsElement.style

--- a/index.html
+++ b/index.html
@@ -311,7 +311,13 @@
             <sgds-datepicker id="myDatepicker2" mode="range" noFlip dateformat="YYYY/MM/DD"
                 initialValue='["2024/03/29", "2025/03/29"]'></sgds-datepicker> -->
         </div>
-
+        <div class="container">
+            <h2>Spinner</h2>
+            <sgds-spinner></sgds-spinner>
+            <sgds-spinner color="secondary"></sgds-spinner>
+            <sgds-spinner color="warning"></sgds-spinner>
+            <sgds-spinner color="danger"></sgds-spinner>
+        </div>
         <div class="container">
             <h2>Dropdown</h2>
             <div class="row">
@@ -797,8 +803,7 @@
             </div>
             <div class="container">
                 <h2>Quantity Toggle</h2>
-                <sgds-quantity-toggle step="1"
-                    buttonvariant="primary" defaultvalue="0"></sgds-quantity-toggle>
+                <sgds-quantity-toggle step="1" buttonvariant="primary" defaultvalue="0"></sgds-quantity-toggle>
 
                 <div class="row">
                     <sgds-dropdown togglerText="Dropdown">
