refactor(table): replace sgdsElement.style

--- a/index.html
+++ b/index.html
@@ -212,6 +212,33 @@
 
     <main>
         <div class="container">
+
+            <sgds-table
+                tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+                tabledata="[
+[&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
+[&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
+[&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
+]" striped="" bordered="" borderless="" size="" variant="dark" responsive="" sort="" removablesort="">
+            </sgds-table>
+            <sgds-table
+                tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+                tabledata="[
+[&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
+[&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
+[&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
+]" striped="" bordered="" borderless="" hover="" size="sm" responsive="sm" sort="" removablesort="">
+            </sgds-table>
+            <sgds-table
+                tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+                tabledata="[
+[&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
+[&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
+[&quot;3&quot;, &quot;Bob&quot;, &quot;Smith&quot;, &quot;@bobsmith&quot;]
+]" striped="" bordered="" borderless="" hover="" size="sm" responsive="md" sort="" removablesort="">
+            </sgds-table>
+        </div>
+        <div class="container">
             <sgds-tab-group variant="tabs-info-toggle">
                 <sgds-tab disabled slot="nav" panel="one"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16"
                         height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
