refactor(textarea): replace textarea

--- a/index.html
+++ b/index.html
@@ -213,6 +213,12 @@
     <main>
         <div class="container">
 
+            <sgds-textarea label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback=""
+                placeholder="Placeholder" minlength="" maxlength="100" resize="auto" defaultvalue="">
+            </sgds-textarea>
+        </div>
+        <div class="container">
+
             <sgds-table
                 tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
                 tabledata="[
